# Endstone-ban

./: __init__.py  my_plugin.py  pyproject.toml
